<resources>
    <string name="app_name">JSF Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sponsors">Sponsors</string>
    <string name="action_settings">Settings</string>
    <string name="action_recreate_data">Recreate Data</string>
    <string name="action_dev_tools">Dev Tools</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_back">Back</string>
    <string name="common_ask">Ask</string>
    <string name="common_bid">Bid</string>
    <string name="common_change">Change</string>
    <string name="common_change_year_high">Change (Year High)</string>
    <string name="common_change_year_low">Change (Year Low)</string>
    <string name="common_year_high">Year High</string>
    <string name="common_year_low">Year Low</string>
    <string name="common_currency">Currency</string>
    <string name="common_stock_exchange">Stock Exchange</string>
    <string name="common_market_cap">Market Cap</string>
    <string name="common_volume_abbr">Vol</string>
    <string name="common_dividend_quarterly_abbr">Div (Qr)</string>
    <string name="common_average_daily_volume_abbr">Ave Vol</string>
    <string name="common_null_value">\u2014\u2014</string>
    <string name="common_news">News</string>
    <string name="common_chat">Chat</string>
    <string name="common_quiz">Quiz</string>
    <string name="splash_screen_prefix">Jacksonville Science Festival</string>
    <string name="percent_change_negative_format">-%1$s%%</string>
    <string name="percent_change_no_change_format">%1$s%%</string>
    <string name="percent_change_positive_format">+%1$s%%</string>
    <string-array name="progress_dialog_messages">
        <item>Crunching numbers&#8230;</item>
        <item>Evaluating data&#8230;</item>
        <item>Analyzing values&#8230;</item>
        <item>Running algorithms&#8230;</item>
        <item>Configuring AI Companions&#8230;</item>
        <item>Generating Quiz Questions&#8230;</item>
        <item>Creating Event Headlines&#8230;</item>
    </string-array>
    <string name="news_headline_1">The Hidden Mystery Behind Biomedical Engineering</string>
    <string name="news_headline_2">Five Ways Biomedical Engineering Will Help You Get More Business</string>
    <string name="news_headline_3">How To Win Buyers And Influence Sales with Nanotechnology</string>
    <string name="news_headline_4">A Surprising Tool To Help You Improve Nanotechnology</string>
    <string name="news_headline_5">Clear And Unbiased Facts About Nanotechnology (Without All the Hype)</string>
    <string name="news_headline_6">How To Win Clients And Influence Markets with Graphic Design</string>
    <string name="news_headline_7">Three Ways You Can Reinvent Graphic Design Without Looking Like An Amateur</string>
    <string name="news_headline_8">How To Start Graphic Design With Less Than $100</string>
    <string name="news_headline_9">Sick And Tired Of Doing Chemical Engineering The Old Way? Read This</string>
    <string name="news_headline_10">Want More Money? Start Training to Become a Chemical Engineer Today</string>
    <string name="news_headline_11">Why Most People Will Never Become Great Research Scientists</string>
    <string name="news_headline_12">Best 50 Tips For Research Scientists</string>
    <string name="news_headline_13">The Ultimate Guide To Quantum Mechanics</string>
    <string name="news_headline_14">Quantum Mechanics? It\'s Easy If You Do It Smart</string>
    <string name="news_headline_15">What Everyone Must Know About Calculus</string>
    <string name="news_headline_16">JAX Science Festival raises $20,000 in Scholarships</string>
    <string name="news_headline_17">Student Exhibit Demonstrates Van Deer Waals Forces using Geckos</string>
    <string name="news_headline_18">Potato Battery Exhibit Starts a v6 Car Engine with only 10 Potatoes</string>
    <string name="news_story_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Aliquam cursus sit amet tellus eu ultrices. Fusce dapibus sapien quis tortor congue
        gravida vitae urna. Cras condimentum enim id quam elementum mollis. Morbi ac nunc eget
        erat varius feugiat. Cras non risus accumsan, semper sem a, efficitur lorem. Cras mollis
        tellus vitae venenatis posuere. Nam fringilla leo nec dui gravida, eget rutrum ex consequat.
        In maximus leo eu elit tempus porta eget sit amet quam. Quisque rhoncus rutrum magna.
        \n\nNunc imperdiet a nulla id ultricies. Suspendisse potenti.
        In hac habitasse platea dictumst. Duis fringilla hendrerit mi eget hendrerit. Fusce eget
        tempor ligula. Nulla facilisi. In sit amet tortor ante. Nullam porttitor ex nunc, at
        fringilla orci efficitur et. Integer vel accumsan justo. Morbi eget laoreet enim.
        \n\nNam id mollis velit. Nam congue nulla sit amet magna hendrerit
        ultrices. Etiam nisi tortor, porttitor sed gravida vitae, consequat vel mi. Ut nec
        suscipit ex. Ut hendrerit rhoncus nibh, viverra rutrum lorem pulvinar et. Praesent non
        massa ac nulla blandit cursus. Mauris tempor nulla id nisi hendrerit, nec efficitur ex
        pulvinar. Pellentesque pellentesque eros et est semper, at semper tellus pulvinar. Nam a
        dapibus nisl. Aliquam sagittis ante ac lorem placerat, a feugiat nunc lacinia. Donec venenatis
        nisi vitae sodales facilisis. Nam at dolor et odio sollicitudin pellentesque. Nam ullamcorper
        tortor a elit maximus ornare. Integer sed semper ante. Nunc rutrum ullamcorper pharetra.
        Nullam id justo purus.
        \n\nCurabitur vitae vestibulum mi. Fusce vitae dolor eget leo
        porta egestas. Etiam non accumsan lectus. Vestibulum suscipit est non euismod vehicula.
        Aliquam luctus lectus non lorem condimentum, at pulvinar tellus tristique. Nulla ipsum ex,
        facilisis porttitor finibus id, vehicula ac lacus. Integer consequat ut erat a molestie.
        Nullam nec augue tellus. Quisque at odio ante.</string>
    <string name="news_story_2">Nunc imperdiet a nulla id ultricies. Suspendisse potenti.
        In hac habitasse platea dictumst. Duis fringilla hendrerit mi eget hendrerit. Fusce eget
        tempor ligula. Nulla facilisi. In sit amet tortor ante. Nullam porttitor ex nunc, at
        fringilla orci efficitur et. Integer vel accumsan justo. Morbi eget laoreet enim.</string>
    <string name="news_story_3">Nam id mollis velit. Nam congue nulla sit amet magna hendrerit
        ultrices. Etiam nisi tortor, porttitor sed gravida vitae, consequat vel mi. Ut nec
        suscipit ex. Ut hendrerit rhoncus nibh, viverra rutrum lorem pulvinar et. Praesent non
        massa ac nulla blandit cursus. Mauris tempor nulla id nisi hendrerit, nec efficitur ex
        pulvinar. Pellentesque pellentesque eros et est semper, at semper tellus pulvinar. Nam a
        dapibus nisl. Aliquam sagittis ante ac lorem placerat, a feugiat nunc lacinia. Donec venenatis
        nisi vitae sodales facilisis. Nam at dolor et odio sollicitudin pellentesque. Nam ullamcorper
        tortor a elit maximus ornare. Integer sed semper ante. Nunc rutrum ullamcorper pharetra.
        Nullam id justo purus.</string>
    <string name="news_story_4">Curabitur vitae vestibulum mi. Fusce vitae dolor eget leo
        porta egestas. Etiam non accumsan lectus. Vestibulum suscipit est non euismod vehicula.
        Aliquam luctus lectus non lorem condimentum, at pulvinar tellus tristique. Nulla ipsum ex,
        facilisis porttitor finibus id, vehicula ac lacus. Integer consequat ut erat a molestie.
        Nullam nec augue tellus. Quisque at odio ante.</string>
    <string name="quiz_math_1_question">What is 2 + 2?</string>
    <string-array name="quiz_math_1_wrong_answers">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string-array name="user_greeting_strings">
        <item>Hi</item>
        <item>Hello</item>
        <item>Good morning</item>
        <item>Good afternoon</item>
        <item>Good evening</item>
        <item>Good day</item>
    </string-array>
    <string-array name="user_question_strings">
        <item>\?</item>
        <item>do</item>
        <item>when</item>
        <item>what</item>
        <item>why</item>
    </string-array>
    <string-array name="user_positive_strings">
        <item>\!</item>
        <item>Sure</item>
        <item>Yes</item>
        <item>Yep</item>
        <item>Yeah</item>
        <item>Totally</item>
        <item>Of course</item>
        <item>All the time</item>
    </string-array>
    <string-array name="user_negative_strings">
        <item>Not really</item>
        <item>Not now</item>
        <item>Absolutely not</item>
        <item>No way</item>
        <item>Go away</item>
        <item>I don\'t like you</item>
        <item>Hate</item>
        <item>Shut up</item>
    </string-array>
    <string-array name="greeting_positive_messages">
        <item>Hey it\'s been a while, how have you been?</item>
        <item>How are you doing today?</item>
        <item>Hi!</item>
        <item>What\'s up?</item>
        <item>Nice to hear from you!</item>
        <item>What a pleasant surprise!</item>
        <item>What\'s new with you?</item>
    </string-array>
    <string-array name="greeting_negative_messages">
        <item>Just leave me alone.</item>
        <item>I\'m not in the mood.</item>
        <item>Bye.</item>
        <item>Talk to you soon.</item>
        <item>We can talk about it later.</item>
    </string-array>
    <string-array name="greeting_neutral_messages">
        <item>Hello.</item>
        <item>Hi there.</item>
        <item>How are you?</item>
        <item>I\'m busy right now.</item>
        <item>Sorry - can\'t talk right now.</item>
    </string-array>
    <string-array name="question_positive_messages">
        <item>Have you thought of any interesting paradoxes lately?</item>
        <item>We\'re gonna go to the movies tonight, wanna come?</item>
        <item>What\'s your favorite subject - Science, Technology, 
            Engineering, Art, or Math?</item>
        <item>Have you ever been to the MOSH?</item>
        <item>Have you considered becoming a mentor?</item>
        <item>Did you see that booth showcasing Nanotechnology?</item>
        <item>Have you thought about Biomedical engineering?</item>
        <item>The Chemical engineering exhibit is awesome - have you seen it?</item>
        <item>Which exhibit do you think is the most interesting?</item>
        <item>Did you have any interesting ideas for a booth?</item>
        <item>Did you hear that presentation about Genetic engineering?</item>
    </string-array>
    <string-array name="question_neutral_messages">
        <item>When did you last see the doctor?</item>
        <item>Are you sure?</item>
        <item>Do you live in Jacksonville?</item>
        <item>Why is that?</item>
        <item>Did you eat breakfast this morning?</item>
        <item>Did you sleep well last night?</item>
        <item>Have you been to the gym lately?</item>
        <item>Why does that matter?</item>
        <item>About what?</item>
        <item>What do you want to know?</item>
        <item>What does that mean?</item>
        <item>Why not?</item>
        <item>What should we talk about now?</item>
    </string-array>
    <string-array name="question_negative_messages">
        <item>Have you thought of any interesting paradoxes lately?</item>
        <item>Can\'t you take a hint?</item>
        <item>Where did you come up with that idea?</item>
        <item>Are you seriously considering that?</item>
    </string-array>
</resources>