<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_recreate_data"
        android:orderInCategory="100"
        android:title="@string/action_recreate_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_dev_tools"
        android:orderInCategory="100"
        android:title="@string/action_dev_tools"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true"/>
</menu>
