<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/chat_dashboard_list_item_spacing"
    android:layout_marginEnd="@dimen/stock_list_item_side_margin"
    android:layout_marginStart="@dimen/stock_list_item_side_margin"
    card_view:cardBackgroundColor="@color/red_thunderbird"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius"
    card_view:cardPreventCornerOverlap="false"
    tools:layout_width="380dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/stock_list_item_height"
        android:layout_marginStart="@dimen/stock_list_item_indicator_width"
        android:background="@drawable/card_view_overlay"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <!-- Left (Symbol, Change) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_symbol"
                style="@style/TextView.Label.Bold"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/text_size_xlarge"
                tools:text="SYMBO"/>

            <TextView
                android:id="@+id/lbl_percent_change"
                style="@style/TextView.Label"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_small"
                android:textSize="@dimen/text_size_medium"
                tools:text="+50.75%"
                tools:textColor="@color/red_thunderbird"/>
        </LinearLayout>

        <!-- Column 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <!-- Volume -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Label.AllCaps.SingleLine"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/common_volume_abbr"
                    android:textSize="@dimen/text_size_tiny"/>

                <TextView
                    android:id="@+id/lbl_volume"
                    style="@style/TextView.Label"
                    android:gravity="end"
                    tools:text="50.75M"/>
            </LinearLayout>

            <!-- Ask -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Label.AllCaps.SingleLine"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/common_ask"
                    android:textSize="@dimen/text_size_tiny"/>

                <TextView
                    android:id="@+id/lbl_ask"
                    style="@style/TextView.Label"
                    android:gravity="end"
                    tools:text="$152.85"/>
            </LinearLayout>

            <!-- Bid -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Label.AllCaps.SingleLine"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/common_bid"
                    android:textSize="@dimen/text_size_tiny"/>

                <TextView
                    android:id="@+id/lbl_bid"
                    style="@style/TextView.Label"
                    android:gravity="end"
                    tools:text="$150.25"/>
            </LinearLayout>
        </LinearLayout>

        <!-- TODO: Stock Evaluation Rankings -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_weight="2"
            android:gravity="center_vertical">

            <com.apollo.stockrater.ui.view.RingIndicatorView
                android:id="@+id/ring_indicator_view"
                android:layout_width="@dimen/chat_profile_picture_size"
                android:layout_height="@dimen/chat_profile_picture_size"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/lbl_formula_rating"
                style="@style/TextView.Label.Bold"
                android:layout_centerInParent="true"
                android:gravity="end"
                android:textSize="@dimen/text_size_xheader"
                tools:text="8"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_star"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/star"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/star"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/star"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>


